[tool.poetry]
name = "multitail"
version = "0.1.0"
description = ""
authors = ["Sean Johnson <me@seanj.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
mitogen = "^0.3.2"
click = "^8.1.3"
halo = "^0.0.31"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
multitail = "multitail:main"